Dashboard do livro mais formulario de adicao e edicao de livro

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -12,7 +12,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a [routerLink]="['/dashboard/livros']">
                     <img src="/icones/dashboard/book.svg" alt="">
                     Livros
                 </a>
