Dashboard pedidos e organizacao de pastas

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a [routerLink]="['/dashboard/pedidos']">
                     <img src="/icones/dashboard/checklist.svg" alt="">
                     Pedidos
                 </a>
