Dashboard categorias mais formulario

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
             </li>
             
             <li>
-                <a href="#">
+                <a [routerLink]="['/dashboard/categorias']">
                     <img src="/icones/dashboard/category.svg" alt="">
                     Categorias
                 </a>
