--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -31,7 +31,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a [routerLink]="['/dashboard/usuarios']">
                     <img src="/icones/dashboard/users.svg" alt="">
                    Usuários
                 </a>
