--- a/src/app/components/dashboard/main/livros/livros.component.html
+++ b/src/app/components/dashboard/main/livros/livros.component.html
@@ -62,4 +62,14 @@
     </table>
 </app-main>
 
-<app-modal [(aberto)]="modalAberto" />
+<app-modal [(aberto)]="modalAberto">
+    <h1 modal-titulo>Descrição</h1>
+    <p>
+        Um guia ilustrado para programadores e outros curiosos. 
+        Um algoritmo nada mais é do que um procedimento passo a 
+        passo para a resolução de um problema. Os algoritmos que 
+        você mais utilizará como um programador já foram descobertos, 
+        testados e provados. Se você quer entendê-los, mas se recusa 
+        a estudar páginas e mais páginas de provas, este é o livro certo.
+    </p>
+</app-modal>
