--- a/src/app/components/dashboard/modal/modal.component.html
+++ b/src/app/components/dashboard/modal/modal.component.html
@@ -1,14 +1,7 @@
 <dialog #modal (close)="fecharModal()">
     <div>
-        <h1>Descrição</h1>
+        <ng-content select="[modal-titulo]" />
         <img src="/icones/dashboard/close.svg" alt="" (click)="fecharModal()">
     </div>
-    <p>
-        Um guia ilustrado para programadores e outros curiosos. 
-        Um algoritmo nada mais é do que um procedimento passo a 
-        passo para a resolução de um problema. Os algoritmos que 
-        você mais utilizará como um programador já foram descobertos, 
-        testados e provados. Se você quer entendê-los, mas se recusa 
-        a estudar páginas e mais páginas de provas, este é o livro certo.
-    </p>
+    <ng-content />
 </dialog>
