--- a/src/app/components/dashboard/main/categorias/editar-categoria/editar-categoria.component.html
+++ b/src/app/components/dashboard/main/categorias/editar-categoria/editar-categoria.component.html
@@ -1,3 +1,3 @@
-<app-formulario-categoria>
+<app-formulario-categoria [categoria]="categoria" (submitForm)="atualizarCategoria($event)">
     <h1>Editar Categoria</h1>
 </app-formulario-categoria>
