--- a/src/app/components/dashboard/main/categorias/criar-categoria/criar-categoria.component.html
+++ b/src/app/components/dashboard/main/categorias/criar-categoria/criar-categoria.component.html
@@ -1,3 +1,3 @@
-<app-formulario-categoria>
+<app-formulario-categoria [categoria]="null" (submitForm)="criarCategoria($event)">
     <h1>Criar Categoria</h1>
 </app-formulario-categoria>
