requisições http para livros

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <aside class="sidebar">
         <div class="sidebar-header">
-            <h1><span>Dev</span>Books;</h1>
+            <h1><span>dev</span>Books();</h1>
         </div>
         <hr/>
         <ul>
