--- a/src/app/components/dashboard/main/livros/editar-livro/editar-livro.component.html
+++ b/src/app/components/dashboard/main/livros/editar-livro/editar-livro.component.html
@@ -1,4 +1,4 @@
-<app-formulario-livro>
+<app-formulario-livro [livro]="livro" (submitForm)="atualizarLivro($event)" >
     <h1>Editar Livro</h1>
 </app-formulario-livro>
 
