--- a/src/app/components/dashboard/main/categorias/categorias.component.html
+++ b/src/app/components/dashboard/main/categorias/categorias.component.html
@@ -12,7 +12,7 @@
         <div class="card">
             <div class="card-header">
                 <h2>{{ categoria.nome }}</h2>
-                <p>{{ categoria.quantidadeLivros }} Livros</p>
+                <p>{{ categoria.quantidade }} Livro(s)</p>
             </div>
             <div class="action-buttons">
                 <button class="put" [routerLink]="['/dashboard/categorias/editar-categoria/', categoria.id]">
