--- a/src/app/components/dashboard/main/livros/criar-livro/criar-livro.component.html
+++ b/src/app/components/dashboard/main/livros/criar-livro/criar-livro.component.html
@@ -1,3 +1,3 @@
-<app-formulario-livro>
+<app-formulario-livro [livro]="null" (submitForm)="criarLivro($event)">
    <h1>Adicionar Novo Livro</h1> 
 </app-formulario-livro>
