Implementando autenticacao via token jwt e criacao de componentes para login registro e layout da pagina principal

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -46,7 +46,7 @@
                     <p class="email">bruno&#64;email.com</p>
                 </div>
             </div>
-            <button class="logout-button">
+            <button class="logout-button" (click)="logout()">
                 <img src="/icones/dashboard/logout.svg" alt="">
                 Sair
             </button>
