Autorização de rotas e restruturação de pastas de autenticacao

--- a/src/app/components/dashboard/main/livros/descricao/descricao.component.html
+++ b/src/app/components/dashboard/main/livros/descricao/descricao.component.html
@@ -4,7 +4,7 @@
         Voltar
     </a>
     @if (livro) {
-        <h1>Descrição de {{ livro.titulo }}</h1>
+        <h1>Descrição de <span>{{ livro.titulo }}</span></h1>
         <p>{{ livro.descricao }}</p>
     }
 </app-main>
