--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -1,6 +1,8 @@
 <div class="container">
     <app-header />
-    <app-pages />
+    <div>
+        <router-outlet />
+    </div>
     <app-footer />
 </div>
 
