--- a/src/app/components/layout/header/header.component.css
+++ b/src/app/components/layout/header/header.component.css
@@ -1,16 +1,43 @@
+.top-bar {
+    text-align: right;
+    margin: .5em;
+}
+
+.top-bar a {
+    text-decoration: none;
+    color: var(--texto);
+    font-size: 12px;
+    padding: 1em;
+}
+
 header {
     display: flex;
     justify-content: space-between;
-    margin: 1em;
+    align-items: center;
     background-color: var(--fundo-componentes);
-    padding: .5em;
-    border-radius: 8px;
+    padding: 1em 8em;
 }
 
 .header-titulo {
-    font-size: 24px;
+    font-size: 28px;
 }
 
 .header-titulo span {
     color: var(--destaque);
+}
+
+.header-botoes {
+    display: flex;
+    gap: 2em;
+}
+
+.header-botoes button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5em;
+    color: var(--texto);
+    font-family: var(--work-sans);
+    background-color: transparent;
+    border: none;
 }
