--- a/src/app/components/layout/pages/login/login.component.css
+++ b/src/app/components/layout/pages/login/login.component.css
@@ -1,13 +1,22 @@
-.form-wrapper {
+
+.login-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
-    gap: 1.5em;
+    gap: 1.4em;
+    width: 450px;
+    padding: 2em 5em;
+    border-radius: 8px;
+    border: 1px solid var(--cor-borda);
 }
 
 .form-header {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     gap: 1em;
     padding-bottom: 1em;
 }
@@ -18,15 +27,9 @@
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-}
-
-form {
    display: flex;
    flex-direction: column;
-   width: 80%;
+   width: 100%;
    margin: auto;
    gap: 1.4em;
 }
@@ -77,12 +80,13 @@ button:hover {
     background-color: #7694ffce;
 }
 
-.login {
+.cadastro {
+    text-align: center;
     font-size: 14px;
     color: var(--sub-texto);
 }
 
-.login a {
+.cadastro a {
     text-decoration: none;
     color: var(--destaque);
 }
